--- a/Client/serieswithworstendings/src/components/landing.css
+++ b/Client/serieswithworstendings/src/components/landing.css
@@ -92,12 +92,17 @@ body {
     border-radius: 10px;
     background: #ffffff;
     width:  14vw;
-    height: 320px;
+    height: 340px;
     margin-left: 10px;
     margin-bottom: 50px;
     color: #686565;
     font-weight: bolder; 
-    border: 2px solid rgb(85, 85, 85) ;  
+    border: 2px solid rgb(85, 85, 85) ;
+}
+
+.container:hover {
+    transform: translateY(-5px); /* Move the card up on hover */
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3); /* Add a shadow effect on hover */
 }
 
 #flexItems{
@@ -110,24 +115,30 @@ body {
     width: 100%;
 }
 
-.row1, .row2{
-    width: 50%;
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 180px;
-    justify-content: center;
-}
 
 .cardimg{
+    margin-top: 2%;
     height: 35vh;
-}
-
-.cardtext{
-    margin-top: -5%;
-
+    border-radius: 10px;
+    transition: transform 0.3s ease;
 }
 
 .cardtext p {
     margin-bottom: 0%;
     margin-top: 0%;
+}
+
+.row1 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); 
+    grid-gap: 100px; 
+    justify-content: center; 
+}
+
+.translucentcontainer::-webkit-scrollbar {
+    width: 12px; 
+}
+
+.translucentcontainer::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.5); /* Color of the thumb */
 }
