--- a/Client/serieswithworstendings/src/components/landing.css
+++ b/Client/serieswithworstendings/src/components/landing.css
@@ -17,6 +17,7 @@ body {
     top: 11%;
     width: 4vw;
 }
+
 .navbartext{
     position: absolute;
     left: 10%;
@@ -29,23 +30,24 @@ body {
     position: fixed;
     top: 4%;
     left: 35%;
-    width: 30vw; 
+    width: 30vw;
+    height: 4.5vh; 
     background-color: rgba(255, 255, 255, 0.3); 
     padding: 0.7%;
     border-radius: 5px;
-  }
-  
-  .search-input {
+}
+
+.search-input {
     width: 100%;
-    padding: 1.3%;
+    padding: 0%;
     border: none;
     outline: none;
     background: transparent; 
     color: #ECF0F1; 
     font-family: 'Arial', sans-serif;
-  }
-  
-  .navbar {
+}
+
+.navbar {
     position: fixed;
     top: 0;
     right: 0;
@@ -76,47 +78,66 @@ body {
     font-weight: 500;
 }
 
-.translucentcontainer{
+.translucentcontainer {
     background-color: #4d4d4d;
     height: 90vh;
     width: 100vw;
-    /* opacity: 40%; */
-    /* filter: opacity(40%); */
     background-color: rgba(140, 140, 140, 0.3);
     margin-top: 6.5%;
     border-top: 0.25vw solid #bdbdbd;
     overflow-y: auto;
+    animation: fadeIn 1s ease-in-out;
 }
 
-.container{
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.container {
     border-radius: 10px;
     background: #ffffff;
-    width:  14vw;
+    width: 14vw;
     height: 340px;
     margin-left: 10px;
     margin-bottom: 50px;
     color: #686565;
-    font-weight: bolder; 
-    border: 2px solid rgb(85, 85, 85) ;
+    font-weight: bolder;
+    border: 2px solid rgb(85, 85, 85);
+    animation: slideIn 0.5s ease-in-out;
 }
 
 .container:hover {
-    transform: translateY(-5px); /* Move the card up on hover */
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3); /* Add a shadow effect on hover */
+    transform: translateY(-5px);
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
 }
 
-#flexItems{
+@keyframes slideIn {
+    0% {
+        transform: translateY(-50px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+#flexItems {
     margin-top: 14vh;
 }
 
-#searchedSection{
+#searchedSection {
     display: flex;
     justify-content: center;
     width: 100%;
 }
 
-
-.cardimg{
+.cardimg {
     margin-top: 2%;
     height: 35vh;
     border-radius: 10px;
@@ -140,5 +161,5 @@ body {
 }
 
 .translucentcontainer::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.5); /* Color of the thumb */
+    background-color: rgba(255, 255, 255, 0.5); 
 }
