--- a/Client/serieswithworstendings/src/components/landing.css
+++ b/Client/serieswithworstendings/src/components/landing.css
@@ -11,6 +11,24 @@ body {
     overflow: hidden;
 }
 
+.dropdown-container {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-container:hover .dropdown-content {
+    display: block;
+}
+
 .tvshowimg{
     position: absolute;
     left: 5%;
